[project]
name = "deepseek-feisu-automation"
version = "0.1.0"
description = "DeepSeek + Baidu Trends + Feishu Automation"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "schedule>=1.2.0",
    "python-dotenv>=1.0.0",
    "gspread>=6.0.0",
    "oauth2client>=4.1.3",
    "google-genai>=1.47.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true



